fix width problem, sticky header on mobile

--- a/source/themes/geografia_theme/static/css/style.css
+++ b/source/themes/geografia_theme/static/css/style.css
@@ -3,13 +3,20 @@
  */
 
 /* Portrait */
+#main {
+    width:100%;overflow-x:hidden
+}
+
 @media only screen
   and (min-device-width: 320px)
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
-    body, html {
-        overflow-x: hidden;
+    .sticky.fixed {
+        top: 0px;
+    }
+    .sticky.fixed .title-area .name img {
+        max-width: 50vw;
     }
 }
 
